if (ENABLE_CUDA)
  cuda_add_library(erpiko rsakey.cpp rsakey-public.cpp bigint.cpp certificate.cpp identity.cpp oid.cpp time.cpp data-source.cpp pkcs12.cpp cmp.cpp signed-data.cpp sim.cpp enveloped-data.cpp tsa-request.cpp tsa-response.cpp rng.cpp rng.cu)
else()
  add_library(erpiko rsakey.cpp rsakey-public.cpp bigint.cpp certificate.cpp identity.cpp oid.cpp time.cpp data-source.cpp pkcs12.cpp cmp.cpp signed-data.cpp sim.cpp enveloped-data.cpp tsa-request.cpp tsa-response.cpp rng.cpp)
endif()
if(WIN32)
  target_link_libraries(erpiko libresslssl libresslcrypto ws2_32)
else()
  if (ENABLE_CUDA)
    target_link_libraries(erpiko libresslssl libresslcrypto ${CUDA_LIBRARIES})
  else()
    target_link_libraries(erpiko libresslssl libresslcrypto)
  endif()
endif()
