set (SOURCES rsakey.cpp rsakey-public.cpp bigint.cpp certificate.cpp identity.cpp oid.cpp time.cpp data-source.cpp pkcs12.cpp cmp.cpp signed-data.cpp sim.cpp enveloped-data.cpp tsa-request.cpp tsa-response.cpp rng.cpp digest.cpp sha1.cpp sha224.cpp sha256.cpp sha384.cpp sha512.cpp)
set (CUDA_SOURCES rng.cu)

if (ENABLE_CUDA)
  cuda_add_library(erpiko ${SOURCES} ${CUDA_SOURCES})
else()
  add_library(erpiko ${SOURCES})
endif()
if(WIN32)
  target_link_libraries(erpiko libresslssl libresslcrypto ws2_32)
else()
  if (ENABLE_CUDA)
    target_link_libraries(erpiko libresslssl libresslcrypto ${CUDA_LIBRARIES})
  else()
    target_link_libraries(erpiko libresslssl libresslcrypto)
  endif()
endif()
